@@ -8330,3 +8330,7 @@ EPRINTS-3.1-beta-2
 
 2009-06-16 cjg
  * Converted Admin screen into several tabs.
+
+2009-06-18 tdb
+ * Set the parent of subobjects wherever possible to reduce DB retrievals
+
